--- a/zam_config.json
+++ b/zam_config.json
@@ -2,29 +2,27 @@
     "managed-datasets": [
 	{
 	    "source": {
-		"pool": "s-root",
-		"dataset": "data/home/i",
+		"remote-host": "olympus",
+		"pool": "o-nas",
+		"dataset": "zam/tmp_source",
 		"windows": [
-		    {"max-age": {"days": 2}, "period": {"minutes": 10}},
-		    {"max-age": {"weeks": 1}, "period": {"hours": 1}}
+		    {"max-age": {"minutes": 2}, "period": {"seconds": 10}},
+		    {"max-age": {"minutes": 5}, "period": {"minutes": 1}}
 		]
 	    },
 	    "destinations": [
 		{
 		    "remote-host": "olympus",
 		    "pool": "o-nas",
-		    "dataset": "backups/s-root",
+		    "dataset": "zam/tmp_dest",
 		    "windows": [
-			{"max-age": {"weeks": 6}, "period": {"hours": 1}},
-			{"max-age": {"months": 6}, "period": {"days": 1}},
-			{"max-age": {"years": 6}, "period": {"weeks": 1}},
-			{"period": {"months": 1}}
+			{"period": {"minutes": 5}}
 		    ]
 		}
 	    ],
-	    "snapshot-period": {"minutes": "10"},
-	    "replication-period": {"hours": "1"},
-	    "prune-period": {"hours": "1"}
+	    "snapshot-period": {"seconds": "10"},
+	    "replication-period": {"minutes": "1"},
+	    "prune-period": {"minutes": "1"}
 	}
     ]
 }
