--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ long_description = file: README.md
 author = Ivan Johnson
 #license = TODO
 #license_file = TODO
-version = 0.3.0.dev0
+version = 0.3.0.dev1
 url = https://github.com/Ivan-Johnson/zam
 platforms = unix, linux
 classifiers =
@@ -29,6 +29,7 @@ console_scripts =
 testing =
     pytest>=6.0
     pytest-cov>=3.0
+    pytest-mock>=3.6
     mypy>=0.910
     flake8>=4.0
 
